--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "react-dom": "^18",
     "vercel": "^37.2.1"
   },
+  "engines": {
+  "node": ">=14.x.x",
+  "pnpm": ">=6.x.x"
+},
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
